--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -4,40 +4,66 @@
 <head>
   <meta charset="utf-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="author" content="" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="robots" content="index, follow" />
+    <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
+    <meta name="keywords" content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
+    <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+    <meta name="robots" content="index, follow" />
 
-  <title>Clipitch</title>
+    <title>Clipitch</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon." />
-  <link rel="manifest" href="/manifest.webmanifest" />
+    <!-- Favicon -->
+    <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imgs/apple-touch-icon."
+    />
 
-  <!-- Open Graph Tags -->
-  <meta property="og:title" content="Incluir título da Página" />
-  <meta property="og:description" content="Incluir descrição da página" />
-  <meta property="og:url" content="Incluir endereço tipo https://exemplo.tld/slug" />
-  <meta property="og:image" content="Incluir endereço tipo https://exemplo.tld/caminho/para/imagem.jpg" />
-  <meta property="og:image:witdth" content="Incluir largura da imagem em pixels, tipo 1200" />
-  <meta property="og:image:height" content="Incluir altura da imagem em pixels, tipo 1200" />
-  <meta property="og:type"
-    content="Incluir o tipo da página - article para detalhamento e - website para outras páginas" />
-  <meta property="og:site_name" content="Incluir o nome do site" />
-  <meta property="og:locale" content="pt-br" />
-  <!-- /Open Graph Tags -->
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Clipitch" />
+    <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="og:url"
+      content="https://clipitch.herokuapp.com/"
+    />
+    <meta
+      property="og:image"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <meta
+      property="og:image:witdth"
+      content="600"
+    />
+    <meta
+      property="og:image:height"
+      content="800"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta property="og:site_name" content="Clipitch" />
+    <meta property="og:locale" content="pt-br" />
+    <!-- /Open Graph Tags -->
 
-  <!-- Twitter Tags -->
-  <meta property="twitter:card" content="Imagem Larga" />
-  <meta property="twitter:url" content="Incluir endereço tipo https://exemplo.tld/slug/" />
-  <meta property="twitter:title" content="Incluir o título da página" />
-  <meta property="twitter:description" content="Incluir descrição da página" />
-  <meta property="twitter:image" content="Incluir endereço tipo https://exemplo.tld/caminho/para/imagem.jpg" />
-  <!-- /Twitter Tags -->
+    <!-- Twitter Tags -->
+    <meta property="twitter:card" content="Imagem Larga" />
+    <meta
+      property="twitter:url"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="twitter:description"
+      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
+    />
+    <meta
+      property="twitter:image"
+      content="https://clipitch.herokuapp.com/imgs/logo.png"
+    />
+    <!-- /Twitter Tags -->
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
