--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -122,16 +122,7 @@
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <select name="select" id="searchValue" class="form-select shadow-none border-0">  
-                    <option value="" disabled selected style="display: none;">Pesquisar...</option>
-                    <option value="Apex Legends">Apex Legends</option>
-                    <option value="Grand Theft Auto V">Grand Theft Auto V</option>                     
-                    <option value="Just Chatting">Just Chatting</option>
-                    <option value="League of Legends">League of Legends</option>   
-                    <option value="Red Dead Redemption 2">Red Dead Redemption 2</option>                 
-                    <option value="VALORANT">Valorant</option>
-                    <option value="World of Warcraft">World of Warcraft</option>
-                  </select>
+                  <input type="text"  id="searchValue"  class="form-control shadow-none border-0">
                 </div>
                 <button id="search-button" type="button" class="btn btn-close-white shadow-none">
                   <i class="fas fa-search"></i>
