--- a/src/clipitch/clipsdia.html
+++ b/src/clipitch/clipsdia.html
@@ -144,9 +144,9 @@
       </div>
     </div>
   </div>
-
+  <br/>
   <!-- Rodapé -->
-<footer class="fixed-bottom bg-custom py-4">
+<footer class="bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
