--- a/src/clipitch/clipssemana.html
+++ b/src/clipitch/clipssemana.html
@@ -140,13 +140,14 @@
       <div class="container">
         <div class="row" id="rowWeeklyPage"></div>
         <br/>
-        <a class="btn btn-warning" type="button" role="button" onclick="window.history.back();"><i class="fas fa-backward"></i>&nbsp;Voltar</a>
+        <a class="btn btn-warning" type="button" role="button" onclick="window.history.back();"><i class="fas fa-backward"></i>&nbsp;Voltar</a>        
       </div>
     </div>
   </div>
+  <br/>
 
   <!-- Rodapé -->
-<footer class="fixed-bottom bg-custom py-4">
+<footer class="bg-custom py-4">
   <div class="container">
     <div class="row align-items-center text-white">
       <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
