--- a/src/clipitch/erro.html
+++ b/src/clipitch/erro.html
@@ -5,9 +5,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
-    <meta name="keywords" content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
-    <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+    <meta
+      name="author"
+      content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro"
+    />
+    <meta
+      name="keywords"
+      content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media"
+    />
+    <meta
+      name="description"
+      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
+    />
     <meta name="robots" content="index, follow" />
 
     <title>Erros de Acesso</title>
@@ -22,27 +31,18 @@
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Clipitch" />
-    <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
     <meta
-      property="og:url"
-      content="https://clipitch.herokuapp.com/"
+      property="og:description"
+      content="Clips do dia e semana do Twitch.tv"
     />
+    <meta property="og:url" content="https://clipitch.herokuapp.com/" />
     <meta
       property="og:image"
       content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
-    <meta
-      property="og:image:witdth"
-      content="600"
-    />
-    <meta
-      property="og:image:height"
-      content="800"
-    />
-    <meta
-      property="og:type"
-      content="website"
-    />
+    <meta property="og:image:witdth" content="600" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Clipitch" />
     <meta property="og:locale" content="pt-br" />
     <!-- /Open Graph Tags -->
@@ -53,7 +53,10 @@
       property="twitter:url"
       content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
-    <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="twitter:title"
+      content="Clips do dia e semana do Twitch.tv"
+    />
     <meta
       property="twitter:description"
       content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
@@ -63,48 +66,49 @@
       content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
     <!-- /Twitter Tags -->
-  
-      <!-- Bootstrap CSS -->
-      <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-      />
-  
-      <!-- FontAwesome CSS -->
-      <link
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        rel="stylesheet"
-      />
-  
-      <!-- Google Fonts -->
-      <link
-        href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap"
-        rel="stylesheet"
-      />
-  
-      <!-- Estilo CSS -->
-      <link href="css/style.css" rel="stylesheet" />
-  
-      <!-- JQuery -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  
-      <!-- Bootstrap JS -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-  
-      <!-- Pooper JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-  
-      <!-- FontAwesome JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-  
-      <!--Script JS-->
-      <script src="js/script.js" type="module"></script>
-    </head>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- FontAwesome CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Estilo CSS -->
+    <link href="css/style.css" rel="stylesheet" />
+
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Pooper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+
+    <!-- FontAwesome JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+
+    <!--Script JS-->
+    <script src="js/script.js" type="module"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-custom">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/src/clipitch/index.html"
+        <a
+          class="navbar-brand js-scroll-trigger"
+          href="/src/clipitch/index.html"
           ><img class="nav-image"
         /></a>
         <button
@@ -128,19 +132,28 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipsdia.html"
+              <a
+                class="nav-link js-scroll-trigger"
+                href="/src/clipitch/clipsdia.html"
                 >Clips do dia</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/src/clipitch/clipssemana.html"
+              <a
+                class="nav-link js-scroll-trigger"
+                href="/src/clipitch/clipssemana.html"
                 >Clips da semana</a
               >
             </li>
             <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
-                  <input type="text"  id="searchValue" placeholder="Pesquisar... " class="form-control shadow-none border-0">
+                  <input
+                    type="text"
+                    id="searchValue"
+                    placeholder="Pesquisar... "
+                    class="form-control shadow-none border-0"
+                  />
                 </div>
                 <button
                   id="search-button"
@@ -157,35 +170,36 @@
     </nav>
     <br />
 
-<div id="diverropai" class="section">
-  <div id="diverrofilho" class="container">
-  <center>
-  <h1 class="textotitulo">Erro </h1>
-  <hr/>
-  <h4>Página não encontrada!</h4> 
-  <p>Lamento. Por algum motivo a sua página não foi carregada! </p> 
-  <a href="index.html" class="btn btn-warning" role="button" aria-pressed="true">Voltar</a>
-</center>
-  </div>
-</div>
-  </body>
-
-<!-- Rodapé -->
-<footer class="bg-custom py-4">
-  <div class="container">
-    <div class="row align-items-center text-white">
-      <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
-      <div class="col-lg-4 text-lg-right">
-        <a class="mr-3 text-white" href="#!">Sobre</a>&nbsp;
-        <a href="#!" class="mr-3 text-white">API</a>&nbsp;
-        <a href="#!" class="mr-3 text-white">Política de Privacidade</a>&nbsp;
-      </div>
-
-      <div class="col-lg-4 text-lg-right">
-        <small>&copy; Todos os direitos reservados.</small>
+    <div id="diverropai" class="section">
+      <div id="diverrofilho" class="container">
+        <center>
+          <h1 class="textotitulo">Erro</h1>
+          <hr />
+          <h4>Página não encontrada!</h4>
+          <p>Lamento. Por algum motivo a sua página não foi carregada!</p>
+          <a
+            href="index.html"
+            class="btn btn-warning"
+            role="button"
+            aria-pressed="true"
+            >Voltar</a
+          >
+        </center>
       </div>
     </div>
-  </div>
-</footer>
-<!-- /Rodapé -->
+  </body>
+
+  <!-- Rodapé -->
+  <footer class="bg-custom py-4">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-lg-4 text-lg-left">
+          Copyright © - Clipitch
+          <br />
+          <small>&copy; Todos os direitos reservados.</small>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /Rodapé -->
 </html>
