--- a/src/clipitch/index.html
+++ b/src/clipitch/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="utf-8" />
+  <head>
+    <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="author" content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro" />
-    <meta name="keywords" content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media" />
-    <meta name="description" content="Clips do dia e da semana do Twitch.TV para os aficionados por Games" />
+    <meta
+      name="author"
+      content="Alonso, Halex, Robson, Welbert, Gustavo e Alexsandro"
+    />
+    <meta
+      name="keywords"
+      content="clips, videos, images, lives, games, trending, diversão, entreterimento, social, media"
+    />
+    <meta
+      name="description"
+      content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
+    />
     <meta name="robots" content="index, follow" />
 
     <title>Clipitch</title>
@@ -23,27 +31,18 @@
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Clipitch" />
-    <meta property="og:description" content="Clips do dia e semana do Twitch.tv" />
     <meta
-      property="og:url"
-      content="https://clipitch.herokuapp.com/"
+      property="og:description"
+      content="Clips do dia e semana do Twitch.tv"
     />
+    <meta property="og:url" content="https://clipitch.herokuapp.com/" />
     <meta
       property="og:image"
       content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
-    <meta
-      property="og:image:witdth"
-      content="600"
-    />
-    <meta
-      property="og:image:height"
-      content="800"
-    />
-    <meta
-      property="og:type"
-      content="website"
-    />
+    <meta property="og:image:witdth" content="600" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Clipitch" />
     <meta property="og:locale" content="pt-br" />
     <!-- /Open Graph Tags -->
@@ -54,7 +53,10 @@
       property="twitter:url"
       content="https://clipitch.herokuapp.com/imgs/logo.png"
     />
-    <meta property="twitter:title" content="Clips do dia e semana do Twitch.tv" />
+    <meta
+      property="twitter:title"
+      content="Clips do dia e semana do Twitch.tv"
+    />
     <meta
       property="twitter:description"
       content="Clips do dia e da semana do Twitch.TV para os aficionados por Games"
@@ -65,113 +67,171 @@
     />
     <!-- /Twitter Tags -->
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- FontAwesome CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <!-- FontAwesome CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Estilo CSS -->
-  <link href="css/style.css" rel="stylesheet" />
+    <!-- Estilo CSS -->
+    <link href="css/style.css" rel="stylesheet" />
 
-  <!-- JQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Pooper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <!-- Pooper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 
-  <!-- FontAwesome JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <!-- FontAwesome JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 
-  <!--Script JS-->
-  <script src="js/script.js" type="module"></script>
-</head>
+    <!--Script JS-->
+    <script src="js/script.js" type="module"></script>
+  </head>
 
-<body>
-  <header class="masthead">
-    <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#"><img class="nav-image" /></a>
-        <button class="
+  <body>
+    <header class="masthead">
+      <!-- Nav bar -->
+      <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
+        <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="#"
+            ><img class="nav-image"
+          /></a>
+          <button
+            class="
               navbar-toggler navbar-toggler-right
               shadow-none
               border-0
               text-white
-            " type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"><i class="fas fa-bars ml-1"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsDia">Clips do dia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#clipsSemana">Clips da semana</a>
-            </li>
-            <li class="nav-item">
-              <div class="input-group">
-                <div class="form-outline">
-                  <input type="text"  id="searchValue" placeholder="Pesquisar... " class="form-control shadow-none border-0">
+            "
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"
+              ><i class="fas fa-bars ml-1"></i
+            ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#clipsDia"
+                  >Clips do dia</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#clipsSemana"
+                  >Clips da semana</a
+                >
+              </li>
+              <li class="nav-item">
+                <div class="input-group">
+                  <div class="form-outline">
+                    <input
+                      type="text"
+                      id="searchValue"
+                      placeholder="Pesquisar... "
+                      class="form-control shadow-none border-0"
+                    />
+                  </div>
+                  <button
+                    id="search-button"
+                    type="button"
+                    class="btn btn-close-white shadow-none"
+                  >
+                    <i class="fas fa-search"></i>
+                  </button>
                 </div>
-                <button id="search-button" type="button" class="btn btn-close-white shadow-none">
-                  <i class="fas fa-search"></i>
-                </button>
-              </div>
-            </li>
-          </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <br />
-    <!-- /Nav bar -->
+      </nav>
+      <br />
+      <!-- /Nav bar -->
 
-    <!-- Carrossel -->
-    <div class="container text-white textoPrincipal">
-      <h1>Selecionados do dia</i></h1>
-      <hr class="my-4 text-white" style="height: 2px" />
-    </div>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
+      <!-- Carrossel -->
+      <div class="container text-white textoPrincipal">
+        <h1>Selecionados do dia</h1>
+        <hr class="my-4 text-white" style="height: 2px" />
       </div>
-      <div class="container">
-        <div class="carousel-inner" id="carouselInner"></div>
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="container">
+          <div class="carousel-inner" id="carouselInner"></div>
+        </div>
+        <br /><br />
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden"></span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden"></span>
+        </button>
       </div>
-      <br /><br />
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
-      </button>
-    </div>
-    <!-- /Carrossel -->
-  </header>
+      <!-- /Carrossel -->
+    </header>
 
-  <!-- Sistema de tags -->
-  <div class="section bg-warning">
-    <ul class="list-group list-group-horizontal-md" id="tagsDiv">
-    </ul>
-  </div>
-  
-  <!-- /Sistema de tags -->
+    <!-- Sistema de tags -->
+    <div class="section bg-warning">
+      <ul class="list-group list-group-horizontal-md" id="tagsDiv"></ul>
+    </div>
+
+    <!-- /Sistema de tags -->
 
     <!-- Galeria de vídeos do dia -->
     <div class="section" id="clipsDia">
@@ -183,7 +243,7 @@
         <div class="row" id="rowDaily"></div>
       </div>
     </div>
-  
+
     <div class="container">
       <div class="text-end">
         <a
@@ -192,13 +252,11 @@
           role="button"
           aria-pressed="true"
           id="btnOptions"
-          >Ver Mais...</a
+          >Ver mais</a
         >
       </div>
-    </div>      
     </div>
-  </div>
-  <!-- /Galeria de vídeos do dia -->
+    <!-- /Galeria de vídeos do dia -->
 
     <!-- Galeria de vídeos da semana -->
     <div class="section" id="clipsSemana">
@@ -207,45 +265,37 @@
         <hr class="my-4" />
       </div>
       <div class="container">
-        <div class="row" id="rowWeekly">          
+        <div class="row" id="rowWeekly"></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="text-end">
+        <a
+          href="/src/clipitch/clipssemana.html"
+          class="btn btn-warning"
+          role="button"
+          aria-pressed="true"
+          id="btnOptions"
+          >Ver mais</a
+        >
+      </div>
+    </div>
+    <br />
+    <!-- /Galeria de vídeos da semana -->
+  </body>
+
+  <!-- Rodapé -->
+  <footer class="bg-custom py-4">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-lg-4 text-lg-left">
+          Copyright © - Clipitch
+          <br />
+          <small>&copy; Todos os direitos reservados.</small>
         </div>
       </div>
     </div>
-
-      <div class="container">
-        <div class="text-end">
-          <a
-            href="/src/clipitch/clipssemana.html"
-            class="btn btn-warning"
-            role="button"
-            aria-pressed="true"
-            id="btnOptions"
-            >Ver Mais...</a>
-        </div>
-      </div>      
-    </div>
-  </div>
-  <br />
-  <!-- /Galeria de vídeos da semana -->
-</body>
-
-<!-- Rodapé -->
-<footer class="bg-custom py-4">
-  <div class="container">
-    <div class="row align-items-center text-white">
-      <div class="col-lg-4 text-lg-left">Copyright © - Clipitch</div>
-      <div class="col-lg-4 text-lg-right">
-        <a class="mr-3 text-white" href="#!">Sobre</a>&nbsp;
-        <a href="#!" class="mr-3 text-white">API</a>&nbsp;
-        <a href="#!" class="mr-3 text-white">Política de Privacidade</a>&nbsp;
-      </div>
-
-      <div class="col-lg-4 text-lg-right">
-        <small>&copy; Todos os direitos reservados.</small>
-      </div>
-    </div>
-  </div>
-</footer>
-<!-- /Rodapé -->
-
+  </footer>
+  <!-- /Rodapé -->
 </html>
